# auto-stack-rank-jira

./: .env.example  .gitignore  .tool-plugins  .tool-versions  README.md  prd.md  pyproject.toml
docs/: ARCHITECTURE.md  CHANGELOG.md  OPERATIONS.md  TESTING.md
jira_stackrank/: __init__.py  cli_output.py  config.py  jira_client.py  main.py  ranking_engine.py
scripts/: bootstrap-asdf.sh
tests/: test_config.py  test_jira_client.py  test_main_integration.py  test_move_planner.py  test_ranking_engine.py
tests/integration/: test_main_integration.py
tests/unit/: test_jira_client.py  test_main.py
